# EINRUL

./: .gitignore  main.py  pyproject.toml  visualize_mesh.py
configs/: rellis.txt  scannet.txt
docker/: Dockerfile
notebook/: frame_visualize.ipynb  metadrive.ipynb  occ_nerf.ipynb  op_check.ipynb  rellis.ipynb  rmm.ipynb
src/einrul/: __init__.py  rellis.py
utils/: render.py
