[project]
name = "einrul"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "waroron", email = "ex.gonw122@gmail.com" }
]
dependencies = [
    "matplotlib>=3.8.4",
    "tqdm>=4.66.2",
    "open3d>=0.18.0",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "trimesh>=4.3.0",
    "opencv-python>=4.9.0.80",
    "opencv-contrib-python>=4.9.0.80",
    "pymcubes>=0.1.4",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/einrul"]
